--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
     "url": "https://github.com/aryung/firebase-line/issues"
   },
   "homepage": "https://github.com/aryung/firebase-line#readme",
-  "devDependencies": {
-    "@google-cloud/functions-framework": "^1.7.1",
-    "data.task": "^3.1.2",
-    "jest": "^26.6.3",
-    "ngrok": "^3.4.1"
-  },
   "dependencies": {
-    "@google-cloud/logging-winston": "^4.0.4",
-    "axios": "^0.21.1",
+    "@firebase/app-compat": "~0.1.19",
+    "@firebase/app-types": "~0.7.0",
+    "@google-cloud/functions-framework": "~3.0.0",
+    "@google-cloud/logging-winston": "^4.1.3",
+    "axios": "^0.21.4",
     "bs58": "^4.0.1",
+    "data.task": "^3.1.2",
     "env-cmd": "^10.1.0",
-    "firebase-admin": "^9.7.0",
+    "firebase-admin": "^9.12.0",
+    "install": "^0.13.0",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
-    "ramda": "^0.27.1",
+    "ngrok": "^3.4.1",
+    "ramda": "^0.27.2",
     "urlencode": "^1.1.0",
-    "winston": "^3.3.3",
+    "winston": "^3.6.0",
     "yaml2json": "^1.0.2"
   }
 }
