--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gcp-build": "npm i",
     "start": "npx functions-framework --target=lineOauth --signature=http",
     "dev:https": "npx ngrok http 8888",
-    "dev:oauth": "npx functions-framework --target=oath --signature=http --port=8888",
+    "dev:oauth": "npx functions-framework --target=oauth --signature=http --port=8888",
     "dev:token": "npx functions-framework --target=token --signature=http --port=8888"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "axios": "^0.21.4",
     "bs58": "^4.0.1",
     "data.task": "^3.1.2",
+    "dotenv": "^16.0.0",
     "env-cmd": "^10.1.0",
     "firebase-admin": "^9.12.0",
     "install": "^0.13.0",
